clusters/talos-robbinsdale/apps/home/app/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: home
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant:2026.4
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "pip install pyalarmdotcomajax"]
        ports:
          - containerPort: 8123
          - containerPort: 5353
          - containerPort: 21084
          - containerPort: 51827
        volumeMounts:
          - mountPath: /config
            name: homeassistant-config
      restartPolicy: Always
      volumes:
        - name: homeassistant-config
          persistentVolumeClaim:
            claimName: homeassistant-config-ceph
