clusters/talos-robbinsdale/apps/home/app/home-assistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
  namespace: home
  annotations:
    item.homer.rajsingh.info/name: "Home Assistant"
    item.homer.rajsingh.info/subtitle: "Smart Home Hub"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/home-assistant.svg"
    item.homer.rajsingh.info/keywords: "smart home, automation, iot"

    service.homer.rajsingh.info/name: "Home"
    service.homer.rajsingh.info/icon: "fas fa-home"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "homeassistant.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homeassistant
          port: 8123
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
